--- a/DataPreparation.ipynb
+++ b/DataPreparation.ipynb
@@ -432,7 +432,7 @@
     {
       "cell_type": "code",
       "source": [
-        "uae2msa = pd.read_csv('uae2msa_fromNADItraining.csv')\n",
+        "uae2msa = pd.read_csv('Emi-NADI.csv')\n",
         "uae2msa['di_text']=uae2msa['uae_tweet_cleaned']\n",
         "uae2msa['data']='NADI'\n",
         "uae2msa['di_cty']=''\n",
@@ -443,7 +443,7 @@
         "uae2msa[['uae_tweet_cleaned','translation_status','msa_translation']]\n",
         "\n",
         "## For subtask 3 only\n",
-        "#df_combineA=pd.concat([df_combineA,uae2msa])\n"
+        "#NADItrain=pd.concat([NADItrain,uae2msa])\n"
       ],
       "metadata": {
         "colab": {
